--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node ./www/cart/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "multiparty": "^4.2.1"
+    "co-mysql": "^1.0.0",
+    "gzip": "^0.1.0",
+    "multiparty": "^4.2.1",
+    "mysql": "^2.17.1"
   }
 }
